@@ -1,4 +1,4 @@
-AC_INIT([libmms], [0.4], [sh@warma.dk])
+AC_INIT([libmms], [0.5], [sh@warma.dk])
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_CONFIG_HEADER([config.h src/mms_config.h])
 AC_CONFIG_SRCDIR(configure.in)
