@@ -855,3 +855,50 @@ gnet_uri_set_fragment (GURI* uri, const char* fragment)
   if (fragment)
     uri->fragment = g_strdup (fragment);
 }
+
+
+/**
+ *  gnet_mms_helper
+ *  @uri: a #GURI
+ *
+ *  returns char* representation of an uri that is sutable for
+ *  using in mms protocol.
+ *  '/path?query'
+ *
+ **/
+
+char* gnet_mms_helper(const GURI* uri)
+{
+      size_t len = 0;
+      char *ret, *tmp = NULL;
+
+
+      /* Strip leading slashes and calculate the length of the path
+       * which might not be present in the URI */
+      if (uri->path) {
+          tmp = uri->path;
+          while (*tmp == '/')
+              ++tmp;
+          len += strlen(tmp);
+      }
+      /* Append length of the query part */
+      if (uri->query)
+          len += strlen(uri->query) + 1; /* + '?' */
+
+      if (!(ret = (char *) malloc(len + 2)))
+          return NULL;
+
+      strcpy(ret, "/");
+
+      /* Copy the optional path */
+      if (tmp)
+          strcat(ret, tmp);
+
+      /* Copy the optional query */
+      if (uri->query) {
+          strcat(ret, "?");
+          strcat(ret, uri->query);
+      }
+
+      return ret;
+}
